Added glowing grass and token block recipe

--- a/bin/main/assets/headstart/lang/en_us.json
+++ b/bin/main/assets/headstart/lang/en_us.json
@@ -1,4 +1,6 @@
 {
 	"item.headstart.nook_bell": "Token",
+	"block.headstart.glowing_grass": "Glowing Grass",
+	"block.headstart.token_block": "Token Block",
 	"itemGroup.headstart": "Headstart"
 }
